# monkey-model-kits

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Documents/: CODING_STYLE.md
gui/: MonkeyNewModel.ui  MonkeyWGridItem.ui  MonkeyWGridTtem.ui  MonkeyWItem.ui  MonkeyWindow.ui
include/: ChronoModel.hpp  Collection.hpp  ModelTime.hpp  Models.hpp  StringManipulation.hpp
include/col/: MonkeyCollection.hpp  MonkeyModel.hpp  MonkeySession.hpp  MonkeyTime.hpp
include/gui/: MonkeyNewModel.hpp  MonkeyWGridItem.hpp  MonkeyWGridTtem.hpp  MonkeyWItem.hpp  MonkeyWindow.hpp
include/run/: MonkeyFile.hpp  MonkeyManager.hpp  MonkeyShell.hpp
res/ico/: icon.icns  mike.icns  mmk.rc
src/: ChronoModel.cpp  Collection.cpp  ModelTime.cpp  Models.cpp  StringManipulation.cpp  main.cpp
src/col/: MonkeyCollection.cpp  MonkeyModel.cpp  MonkeySession.cpp
src/col/time/: MonkeyDate.cpp  MonkeySession.cpp
src/gui/: MonkeyNewModel.cpp  MonkeyWGridItem.cpp  MonkeyWItem.cpp  MonkeyWindow.cpp
src/gui/pages/: MonkeyCPage.cpp  MonkeyHPage.cpp  MonkeySCPage.cpp  MonkeySWPage.cpp
src/run/: MonkeyFile.cpp  MonkeyManager.cpp  MonkeyShell.cpp
